--- a/Rohit_Master_Thesis/MastersThesis.tex
+++ b/Rohit_Master_Thesis/MastersThesis.tex
@@ -166,11 +166,13 @@ Finally my heartfelt thanks go to my family and friends for their unwavering sup
 \clearpage
 \include{2.Theory}   % (\chapter{})
 \clearpage
-\include{3.Methodology}   % (\chapter{})
+\include{3.Methodology}
 \clearpage
-\include{4.Results_Discussion}
+\include{4.Results}
 \clearpage
-\include{5.Conclusion_Future_Works}
+\include{5.Discussion.tex}
+\clearpage
+\include{6.Conclusion_Future_Works}
 \input{chapter_summary}
 
 \clearpage
